# Pickleicious

./: .air.toml  .env.example  .gitignore  CMakeLists.txt  Makefile  README.md  REQS.md  SPEC.md  Taskfile.yml  WF_DIRECTIVES.md  build.sh  clean-all.cmake  config.yaml  go.mod  go.sum
.github/workflows/: pr-checks.yml
.gocache/: trim.txt
.gocache/00/: 00023f9d6022c730814009f5ec9e82807df48b8b6a79c25dcedf7558ae4cbde0-a  00826fa86c961b1bcd17d3ab50783bd959c99b259be9069bb7d3c876873c3fdf-a  00cbb571b73125829ceac84a9c335c3360a25fe0dba651d6a1c8b69074d582fa-a  00d4599e2bef046fd7ed478591b8f324d841e10b58c1c68295e52cd1e19697a1-a  00edea2d44b08461d874c5ec41dc167efae3aa813dca61e160a9d8a6b0993e92-a
.gocache/01/: 010cc58f57588a77729ff99f2ed6f708f0961dd5bbdc9e55fa19bc9863946117-a  011a709c5b8b3725d3a38a9c3a31afba54abc088f7f3fd4c5a91a0223e907598-a  011f73af7c38d75e6b77f8f11d7da01c7980b60d82776cf1177d1e840e09ecad-a  01322c0c1a3ef0d3c9bb3bef4488b684bd4e3c24e6d00b3ee2a99ce49de6fa08-a  014a48b1d938afe0fd1763af40e12fa3a8229ef4bbc4cacbd9a4acec9a8ef652-a  01c9201a95802ada87590307ee40a87aea824184628dd22fda6eb4016e36c71c-a  01c93c3de10ae8b1aa5b2869857eb367ebab598354d5612179453454eadd5e1d-a  01dbd538991c47fb39c829d659405d2c32aeab89fb9f6c8073156580dbbb5fe8-a  01f8bd1a3871d756aaa00a523b93a8ebe6bb25cd86f625208e09881023bd406e-a
.gocache/02/: 020fb8e5f5dbd6330edee7bce8404109d1ce52936718655f83cf05d22f6725f3-a  02223f0e172a7f2626a628d39d712206e6271646f825c63e4d42b3d5003df2c0-d  024ed926218c21031fb2ca8dd0c5ac1084abb8d9d4e7ba57c0f6a822186b66de-a  02a4694caada9880b0d56ac444aba218ca185de08b2e8f5bcd20cdeaf1e404f3-a  02ba3c99e91f48407fa5316f7b0d5d6eaf990dc94c68e41f7f235254c1e4f117-a  02ff5775629f1e2ae55cf08ffda940fcfa0a226c3dfb546ec614d739a7e69193-a
.gocache/03/: 032c9ca2ec5cc46c7488bdf070b188647f8dae33443a1c36a8280a3dbb0327e0-a  036f478a896d1a2316755721e2eccf75b906c1154a79718b0eec77c3d8f36351-a  038c16a190532e19f6cecdd81d6d79ba03483a2993d6bec133f45b3f32dde8cb-a  03a51f4e22b28f12bad0b27219bb94c1dfb821e70fcb87985769a5c573b36ab8-a  03c196d35cd03a951902c48267fed41d5a5470d2951c1a22351f466d96345f7f-a
.gocache/04/: 0426005a037c2a92028b1187bea747ee202d9d7c4e422b0171d456c0e1d029ac-a  04276c74a77ddd683dedf1788cb7a6735f3865b06885a43bd3b1dd503d194b05-a  04bc0a051b6db4eba7ccaa6c92c135f074e0566b938cde27c0f22cd80029845c-a  04bf1be7822bf08607b0c0d1066fc24f7ed95f3593f2f616b40807c1b23a5b11-a  04f4faffaa072a691aa7784f05815e85b07a8ff25b42d16b7e381f9f2f3e22d7-a  04fa38437804234ad259f699656f844f6536e32bd99bc2c32ccc33da47a5b67c-a
.gocache/05/: 05077d0e6354bb2e542031d9860467f8b7e44bae5cd221b604d0832f98a26c72-a  051c94faef82972bbb364af28d46c47a6ea51b99241560f99b57d26d56d12915-a  05a09990b646ea8ea21efd09bd2856a768e012fa4028bdfe2224b8825a8db96c-a  05cc4bbde2c9309a26d19edd71ea94c40840582d4f70b5e7c41090f7fb0b861c-a  05fea5f43c2147cb9fccf13daaa6985bb7691592386e6d2de1b2b7d4ef131abe-a
.gocache/06/: 0630205657bbb662760d3e30b4791c7d60811cb9425f1f22875162a4ed9f7ea1-d  068037f83e6a764d6579b09542667e43e5b1f533f79ac3ebeb77c99ec1940050-d  06944f2b785f8934e0255c6ca0dc67f3a6ea4ab2736ca49b8ebce16f0c93aa16-d  06ab5b05e9bdd6f8ac8dc6a3cf32a3913ce4f279247d762ccb0aba8ff9395dbf-a  06b48d64479931f19512149a5f768ac2f7d412626121a5d9013b42c2b280ad8a-a  06cacb0b88d5f557bf26e1b2ce6ea9e229d80547fa8ac5a6b101d214e2ad6e2b-a
.gocache/07/: 07107f574300f9efb69f506e18028ff723bf520f4135ad21cbd431d8f99af92b-d  078daabdd24f79894156089eb6d414d71e6be0744806128d9aec43d61814f538-a  078f7207931911b12277c4f1c675582cdcde2171725688eef9e8a847db93b850-a  07922310188e9248b22631d06048b0056b7dc182951fee3631c9e0bc2e5859b0-a  07c76d863638b2ab6770e19b814642c75ff1d22bc2cf615c1212718e0ebafcbe-a  07d019554b63bcb8af90e689f7a5ed981cce60a427dd202934e35df674275bcd-d  07eaf6617dbc0ad1d4825f5c6efb498f9d19971cde5f8c9130c4037bc70922c9-a
.gocache/08/: 080d417af622728be8eb0c1243dc4b5727e5db73daa57ec76a4be561cd7e1807-a  084a6d29fead5946d2e63d512b37ef452d66582145bb7894a1e8dcb0f509f6f4-a  0888622887adfb3293f756a08c19359e6b2b5c303853e386956b99e1085527a7-a  08a2b621a5ab35f7782993a2ccbea07b7d486b4166fa52bf8cf7a8b5354cf091-a  08c05bf16d325d9d4f8d07d9402a215ca827c58e6d44c4c1679c18b7845049cd-a  08c996a958c3588ca88d2338939c2879516b1efc27701b594d008b30853a060a-a  08cc9c747c1d6c620a0ee5a43b5b7d299dab19fff3be0b65bd794a66c2c71844-a  08d0e6694993c52d9bcc85e840ad6d3badfe4a01cb0207831cf2381a5456970c-a
.gocache/09/: 0905fd5f2e74e6dc1a9c8b717df132837128f0834e22c71526f07c60e1701df6-a  090c3565b52782fe5584bc1f24367f31bc1d45b2003f6822f961413340dd1e36-a  091b75a172f65a69a3f54d02e1ee07ba4b7f048da848cdb003b53770da166fa4-a  097530525d1599cf9cf652f70bc079321777e514fdaf0af0deda3d2bf06e34bb-a  09aa972e510da147d8b15f5e48e706dfb6c08af556367e48181160513c65a810-a  09b25f687e8be6eb8479df5bb1c7a510c289aebfd1479b45252f954c86359957-a  09b80c23e022e07f72a07c511b4435591b7deca0dd89954efecdbd4c3f698436-a  09cec0ceaf146d41caadc6943ce5681f3e7ec31dc0841559820158285b3a22bf-a
.gocache/0a/: 0a0b31ef0ff5456f471e604cd6600203961db66a73fbead459eef912266f1c62-d  0a61ac23d4dc08a2a920f456215dfd19abe38535cbb73390f7cd03401ddfa148-a  0a651c91340c129bc9ac99fdab81780d3ae413c33d330e1a53fefae485c52cb4-d  0a74294024f3658db6814f6b8fa42b216072b504a3fd7eb3b32b221831d33375-a  0a74b4e4b9bd8f1a0cd95dcbd8c68752ac7354b9587ffdce074faec729a69f6f-a  0ab2bde19a1b4c53afc330751660bd62c0e8b33b44386a8f378d15ada8cdd450-a  0adf5f52ee8e0b747ff113a03c37f53dd5102c8613157b108ed18d3648a15a89-a
.gocache/0b/: 0b2b73b57174396bae5f81a3b4e3438caaff9d9e1be2de5c2117190eb7b31380-a  0b3d1a8f28613517e8e9983fac39a3375f813ff91957b33cda5316ff0ed21807-a  0b4dc0f187aa81e3ed278ed1c3dc760a6baf5c14c61da079b7f9a9a6cf64b29e-a  0b5972202dfa66cd7e8cfc2e20a388dae61812da54504c2dbf0d06625ceec54e-a  0bbd36953ff4bff8f0be754bdc60dcaa66341ea41472fcd3b0b2dc6c8a153357-a  0bc4d5d4dfe36bdd377eb3d752723e1bc0bed7b563e144121b9d30be3ced916b-a  (+1 more)
assets/: themes  themes_embed.go
cmake/: dev.cmake
cmd/: CMakeLists.txt
config/: .env.example  app.yaml.example  app.yaml.in
scripts/: dev_watch.sh
tools/: CMakeLists.txt
web/: package-lock.json  package.json  tailwind.config.js
(+1975 files in other folders)
